apps/pki/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pki-namespace-default-deny
  namespace: pki
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
